# score-genius

./: .env.example  .gitattributes  .gitignore  .renderignore  .sqlfluff  .sqlfluffignore  Dockerfile  Makefile  NFL_Model_PRD.md  README.md  ScoreGenius_Subsets.md  analyze_meta.py  check_nba_schedule.sh  encoded_pfx.txt  export_all_csv.sh  fetch_nfl_upcoming.sh  find_decimal_stat.py  find_floats.py  games_date_2025-05-30.json  games_date_2025-05-31.json  games_date_2025-06-01.json  games_next_2025-05-31.json  games_next_2025-06-01.json  index.html  jest.config.cjs  manifest.json  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  robots.txt  scoregenius_rsa.pfx  scoregenius_rsa.pfx.b64  scoregenius_rsa_legacy.pfx  scoregenius_rsa_legacy.pfx.b64  scoregenius_test.pfx  service-worker.js  temp.pfx  vercel.json  (+1 more)
backend/: api_integration.py  app.py  backfill_missing_weather.ts  config.py  fangraphs_debug.html  headless_fetch.py  main.py  pyrightconfig.json  requirements.txt  responsecapture.py  rpc_supabase_specs.md  supabase_table_column_names.json
docs/: AGENT.md  changelog.md  nfl_endpoints.md  nfl_team_agg.md  repo_structure.md
frontend/: README.md  android.keystore  app-release-bundle.aab  app-release-signed.apk  app-release-signed.apk.idsig  app-release-unsigned-aligned.apk  app.html  crash_log.txt  home.html  index.html  manifest-checksum.txt  package-lock.json  package.json  pixel2_crash_log.txt  render.yaml  requirements.txt  scoregenius_offline_crash.txt  service-worker.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  (+4 more)
(+1354 files in other folders)
