# score-genius/pyproject.toml

[project]
name = "score-genius"
version = "1.3.0"
description = "A PWA for sports analytics and score prediction."
requires-python = ">=3.9"

# This section makes the `backend` code installable and discoverable
[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

# Configuration for the Ruff linter and formatter
[tool.ruff]
line-length = 99
select = ["E", "F", "W", "I", "UP"] # Standard errors, Pyflakes, warnings, isort, pyupgrade

extend-exclude = [
    "venv*", # Also good to exclude virtual environments.
]

# Configuration for the Black code formatter
[tool.black]
line-length = 99

# Configuration for pytest
[tool.pytest.ini_options]
# Explicitly tell pytest where to find tests
testpaths = [
    "backend/tests",
]
# Helps pytest find the `backend` module
pythonpath = [
  "."
]
# Setting to load the .env file for tests is excellent
env_files = [
    "backend/.env"
]